--- a/rpi-build/conf/local.conf
+++ b/rpi-build/conf/local.conf
@@ -265,3 +265,7 @@ PACKAGECONFIG_append_pn-qemu-system-native = " sdl"
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
+
+# Add ssh to image
+IMAGE_INSTALL = " openssh"
+IMAGE_FSTYPES += "rpi-sdimg tar"
