add meta-sw layer

--- a/bb-build/conf/bblayers.conf
+++ b/bb-build/conf/bblayers.conf
@@ -19,4 +19,6 @@ BBLAYERS ?= " \
   /home/ahmed/Documents/yocto_organized/layers/meta-openembedded/meta-python \
   /home/ahmed/Documents/yocto_organized/layers/meta-openembedded/meta-filesystems \
   /home/ahmed/Documents/yocto_organized/layers/meta-openembedded/meta-oe \
-"
+  /home/ahmed/Documents/yocto_organized/layers/meta-sw \
+  /home/ahmed/Documents/yocto_organized/layers/meta-custom \
+  "
