add recipes building example

--- a/bb-build/conf/local.conf
+++ b/bb-build/conf/local.conf
@@ -268,3 +268,6 @@ CONF_VERSION = "1"
 
 IMAGE_INSTALL_append = " openssh"
 IMAGE_FSTYPES_append = " tar"
+
+# PREFERRED_VERSION_error-gcc = "1.0"
+# IMAGE_INSTALL_append = " error-gcc"
