--- a/rpi-build/conf/local.conf
+++ b/rpi-build/conf/local.conf
@@ -267,5 +267,5 @@ PACKAGECONFIG_append_pn-qemu-system-native = " sdl"
 CONF_VERSION = "1"
 
 # Add ssh to image
-IMAGE_INSTALL = " openssh"
+IMAGE_INSTALL_append = " openssh apt"
 IMAGE_FSTYPES += "rpi-sdimg tar"
