make the scripts more generic

--- a/bb-build/conf/bblayers.conf
+++ b/bb-build/conf/bblayers.conf
@@ -6,19 +6,19 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  /home/ahmed/Documents/yocto_organized/layers/poky/meta \
-  /home/ahmed/Documents/yocto_organized/layers/poky/meta-poky \
-  /home/ahmed/Documents/yocto_organized/layers/poky/meta-yocto-bsp \
-  /home/ahmed/Documents/yocto_organized/layers/meta-ti \
-  /home/ahmed/Documents/yocto_organized/layers/meta-arm/meta-arm \
-  /home/ahmed/Documents/yocto_organized/layers/meta-arm/meta-arm-autonomy \
-  /home/ahmed/Documents/yocto_organized/layers/meta-arm/meta-arm-bsp \
-  /home/ahmed/Documents/yocto_organized/layers/meta-arm/meta-arm-toolchain \
-  /home/ahmed/Documents/yocto_organized/layers/meta-openembedded/meta-networking \
-  /home/ahmed/Documents/yocto_organized/layers/meta-virtualization \
-  /home/ahmed/Documents/yocto_organized/layers/meta-openembedded/meta-python \
-  /home/ahmed/Documents/yocto_organized/layers/meta-openembedded/meta-filesystems \
-  /home/ahmed/Documents/yocto_organized/layers/meta-openembedded/meta-oe \
-  /home/ahmed/Documents/yocto_organized/layers/meta-sw \
-  /home/ahmed/Documents/yocto_organized/layers/meta-custom \
+  $REPO_DIR/layers/poky/meta \
+  $REPO_DIR/layers/poky/meta-poky \
+  $REPO_DIR/layers/poky/meta-yocto-bsp \
+  $REPO_DIR/layers/meta-ti \
+  $REPO_DIR/layers/meta-arm/meta-arm \
+  $REPO_DIR/layers/meta-arm/meta-arm-autonomy \
+  $REPO_DIR/layers/meta-arm/meta-arm-bsp \
+  $REPO_DIR/layers/meta-arm/meta-arm-toolchain \
+  $REPO_DIR/layers/meta-openembedded/meta-networking \
+  $REPO_DIR/layers/meta-virtualization \
+  $REPO_DIR/layers/meta-openembedded/meta-python \
+  $REPO_DIR/layers/meta-openembedded/meta-filesystems \
+  $REPO_DIR/layers/meta-openembedded/meta-oe \
+  $REPO_DIR/layers/meta-sw \
+  $REPO_DIR/layers/meta-custom \
   "
