--- a/bb-build/conf/local.conf
+++ b/bb-build/conf/local.conf
@@ -47,7 +47,7 @@ MACHINE ??= "beaglebone"
 #
 # The default is a downloads directory under TOPDIR which is the build directory.
 #
-DL_DIR ?= "/home/ahmed/Documents/yocto_organized/downloads"
+DL_DIR ?= "$REPO_DIR/downloads"
 
 #
 # Where to place shared-state files
@@ -63,7 +63,7 @@ DL_DIR ?= "/home/ahmed/Documents/yocto_organized/downloads"
 #
 # The default is a sstate-cache directory under TOPDIR.
 #
-SSTATE_DIR ?= "/home/ahmed/Documents/yocto_organized/sstate-cache"
+SSTATE_DIR ?= "$REPO_DIR/sstate-cache"
 
 #
 # Where to place the build output
@@ -75,7 +75,7 @@ SSTATE_DIR ?= "/home/ahmed/Documents/yocto_organized/sstate-cache"
 #
 # The default is a tmp directory under TOPDIR.
 #
-TMPDIR = "/home/ahmed/Documents/yocto_organized/tmp"
+TMPDIR = "$REPO_DIR/tmp"
 
 #
 # Default policy config
