--- a/rpi-build/conf/bblayers.conf
+++ b/rpi-build/conf/bblayers.conf
@@ -6,8 +6,8 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  /home/ahmed/Documents/yocto_organized/layers/poky/meta \
-  /home/ahmed/Documents/yocto_organized/layers/poky/meta-poky \
-  /home/ahmed/Documents/yocto_organized/layers/poky/meta-yocto-bsp \
-  /home/ahmed/Documents/yocto_organized/layers/meta-raspberrypi \
+  $REPO_DIR/layers/poky/meta \
+  $REPO_DIR/layers/poky/meta-poky \
+  $REPO_DIR/layers/poky/meta-yocto-bsp \
+  $REPO_DIR/layers/meta-raspberrypi \
   "
