change DISTRO to sysd-poky

--- a/rpi-build/conf/local.conf
+++ b/rpi-build/conf/local.conf
@@ -85,7 +85,7 @@ TMPDIR = "$REPO_DIR/tmp"
 # Ultimately when creating custom policy, people will likely end up subclassing 
 # these defaults.
 #
-DISTRO ?= "poky"
+DISTRO ?= "sysd-poky"
 # As an example of a subclass there is a "bleeding" edge policy configuration
 # where many versions are set to the absolute latest code from the upstream 
 # source control systems. This is just mentioned here as an example, its not
@@ -266,6 +266,4 @@ PACKAGECONFIG_append_pn-qemu-system-native = " sdl"
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
 
-# Add ssh to image
-IMAGE_INSTALL_append = " openssh apt"
-IMAGE_FSTYPES += "rpi-sdimg tar"
+IMAGE_FSTYPES += "rpi-sdimg"
