update scripts + rpi to build sysd only

--- a/rpi-build/conf/bblayers.conf
+++ b/rpi-build/conf/bblayers.conf
@@ -10,4 +10,5 @@ BBLAYERS ?= " \
   $REPO_DIR/layers/poky/meta-poky \
   $REPO_DIR/layers/poky/meta-yocto-bsp \
   $REPO_DIR/layers/meta-raspberrypi \
+  $REPO_DIR/layers/meta-sw \
   "
