--- a/meta-sw/conf/layer.conf
+++ b/meta-sw/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-sw = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-sw = "6"
 
 LAYERDEPENDS_meta-sw = "core"
-LAYERSERIES_COMPAT_meta-sw = "dunfell"
+LAYERSERIES_COMPAT_meta-sw = "scarthgap"
