--- a/rpi-build/conf/bblayers.conf
+++ b/rpi-build/conf/bblayers.conf
@@ -6,9 +6,9 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  $REPO_DIR/layers/poky/meta \
-  $REPO_DIR/layers/poky/meta-poky \
-  $REPO_DIR/layers/poky/meta-yocto-bsp \
-  $REPO_DIR/layers/meta-raspberrypi \
-  $REPO_DIR/layers/meta-sw \
+  /opt/yocto/ycoto-excersise/poky/meta \
+  /opt/yocto/ycoto-excersise/poky/meta-poky \
+  /opt/yocto/ycoto-excersise/poky/meta-yocto-bsp \
+  /opt/yocto/ycoto-excersise/meta-raspberrypi \
+  /opt/yocto/ycoto-excersise/meta-sw \
   "
