--- a/bb-build/conf/bblayers.conf
+++ b/bb-build/conf/bblayers.conf
@@ -6,19 +6,20 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  $REPO_DIR/layers/poky/meta \
-  $REPO_DIR/layers/poky/meta-poky \
-  $REPO_DIR/layers/poky/meta-yocto-bsp \
-  $REPO_DIR/layers/meta-ti \
-  $REPO_DIR/layers/meta-arm/meta-arm \
-  $REPO_DIR/layers/meta-arm/meta-arm-autonomy \
-  $REPO_DIR/layers/meta-arm/meta-arm-bsp \
-  $REPO_DIR/layers/meta-arm/meta-arm-toolchain \
-  $REPO_DIR/layers/meta-openembedded/meta-networking \
-  $REPO_DIR/layers/meta-virtualization \
-  $REPO_DIR/layers/meta-openembedded/meta-python \
-  $REPO_DIR/layers/meta-openembedded/meta-filesystems \
-  $REPO_DIR/layers/meta-openembedded/meta-oe \
-  $REPO_DIR/layers/meta-sw \
-  $REPO_DIR/layers/meta-custom \
+  /opt/yocto/ycoto-excersise/poky/meta \
+  /opt/yocto/ycoto-excersise/poky/meta-poky \
+  /opt/yocto/ycoto-excersise/poky/meta-yocto-bsp \
+  /opt/yocto/ycoto-excersise/meta-ti/meta-beagle \
+  /opt/yocto/ycoto-excersise/meta-ti/meta-ti-bsp \
+  /opt/yocto/ycoto-excersise/meta-ti/meta-ti-extras \
+  /opt/yocto/ycoto-excersise/meta-arm/meta-arm \
+  /opt/yocto/ycoto-excersise/meta-arm/meta-arm-bsp \
+  /opt/yocto/ycoto-excersise/meta-arm/meta-arm-toolchain \
+  /opt/yocto/ycoto-excersise/meta-openembedded/meta-networking \
+  /opt/yocto/ycoto-excersise/meta-virtualization \
+  /opt/yocto/ycoto-excersise/meta-openembedded/meta-python \
+  /opt/yocto/ycoto-excersise/meta-openembedded/meta-filesystems \
+  /opt/yocto/ycoto-excersise/meta-openembedded/meta-oe \
+  /opt/yocto/ycoto-excersise/meta-sw \
+  /opt/yocto/ycoto-excersise/meta-custom \
   "
