--- a/rpi-build/conf/local.conf
+++ b/rpi-build/conf/local.conf
@@ -47,7 +47,7 @@ MACHINE ??= "raspberrypi4"
 #
 # The default is a downloads directory under TOPDIR which is the build directory.
 #
-DL_DIR ?= "$REPO_DIR/downloads"
+DL_DIR ?= "/opt/yocto/downloads"
 
 #
 # Where to place shared-state files
@@ -63,7 +63,7 @@ DL_DIR ?= "$REPO_DIR/downloads"
 #
 # The default is a sstate-cache directory under TOPDIR.
 #
-SSTATE_DIR ?= "$REPO_DIR/sstate-cache"
+SSTATE_DIR ?= "/opt/yocto/sstate-cache"
 
 #
 # Where to place the build output
@@ -75,7 +75,7 @@ SSTATE_DIR ?= "$REPO_DIR/sstate-cache"
 #
 # The default is a tmp directory under TOPDIR.
 #
-TMPDIR = "$REPO_DIR/tmp"
+TMPDIR = "/opt/yocto/tmp"
 
 #
 # Default policy config
@@ -152,7 +152,7 @@ EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 #   - 'image-prelink' in order to prelink the filesystem image
 # NOTE: if listing mklibs & prelink both, then make sure mklibs is before prelink
 # NOTE: mklibs also needs to be explicitly enabled for a given image, see local.conf.extended
-USER_CLASSES ?= "buildstats image-mklibs image-prelink"
+USER_CLASSES ?= "buildstats"
 
 #
 # Runtime testing of images
@@ -238,7 +238,7 @@ BB_DISKMON_DIRS ??= "\
 #
 # By default native qemu will build with a builtin VNC server where graphical output can be
 # seen. The line below enables the SDL UI frontend too.
-PACKAGECONFIG_append_pn-qemu-system-native = " sdl"
+PACKAGECONFIG:append_pn-qemu-system-native = " sdl"
 # By default libsdl2-native will be built, if you want to use your host's libSDL instead of 
 # the minimal libsdl built by libsdl2-native then uncomment the ASSUME_PROVIDED line below.
 #ASSUME_PROVIDED += "libsdl2-native"
@@ -267,3 +267,7 @@ PACKAGECONFIG_append_pn-qemu-system-native = " sdl"
 CONF_VERSION = "1"
 
 IMAGE_FSTYPES += "rpi-sdimg"
+LICENSE_FLAGS_ACCEPTED += "synaptics-killswitch"
+BB_SANITY_SKIP_NETWORK_CHECKS = "1"
+BB_DISABLE_NETWORK_SANDBOX = "1"
+BB_NO_NETWORK = "0"
