add qt and oe layers to bb and rpi make bitbake_bb_rpi take arguments instead of building all

--- a/rpi-build-sysd/conf/local.conf
+++ b/rpi-build-sysd/conf/local.conf
@@ -271,3 +271,4 @@ LICENSE_FLAGS_ACCEPTED += "synaptics-killswitch"
 BB_SANITY_SKIP_NETWORK_CHECKS = "1"
 BB_DISABLE_NETWORK_SANDBOX = "1"
 BB_NO_NETWORK = "0"
+# BOOT_SPACE_ALIGNED = "131072" # 128MB
