--- a/rpi-build-sysv/conf/local.conf
+++ b/rpi-build-sysv/conf/local.conf
@@ -266,8 +266,9 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
 
-IMAGE_FSTYPES += "rpi-sdimg"
+IMAGE_FSTYPES += " rpi-sdimg"
 LICENSE_FLAGS_ACCEPTED += "synaptics-killswitch"
 BB_SANITY_SKIP_NETWORK_CHECKS = "1"
 BB_DISABLE_NETWORK_SANDBOX = "1"
 BB_NO_NETWORK = "0"
+BOOT_SPACE_ALIGNED = "128000"
