add qt app and oe layers for bb

--- a/bb-build-sysv/conf/bblayers.conf
+++ b/bb-build-sysv/conf/bblayers.conf
@@ -29,4 +29,5 @@ BBLAYERS ?= " \
   /opt/yocto/ycoto-excersise/meta-sw \
   /opt/yocto/ycoto-excersise/meta-custom \
   /opt/yocto/ycoto-excersise/meta-qt5 \
+  /opt/yocto/ycoto-excersise/meta-section \
   "
