--- a/bb-build-sysv/conf/local.conf
+++ b/bb-build-sysv/conf/local.conf
@@ -269,3 +269,5 @@ CONF_VERSION = "2"
 BB_SANITY_SKIP_NETWORK_CHECKS = "1"
 BB_DISABLE_NETWORK_SANDBOX = "1"
 BB_NO_NETWORK = "0"
+BB_SETSCENE_ENFORCE = "0"
+
