add Docker build

--- a/rpi-build-sysd/conf/bblayers.conf
+++ b/rpi-build-sysd/conf/bblayers.conf
@@ -6,20 +6,20 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  /opt/yocto/ycoto-excersise/poky/meta \
-  /opt/yocto/ycoto-excersise/poky/meta-poky \
-  /opt/yocto/ycoto-excersise/poky/meta-yocto-bsp \
-  /opt/yocto/ycoto-excersise/meta-raspberrypi \
-  /opt/yocto/ycoto-excersise/meta-sw \
-  /opt/yocto/ycoto-excersise/meta-qt5 \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-oe \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-networking \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-python \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-filesystems \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-multimedia \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-perl \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-gnome \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-xfce \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-webserver \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-initramfs \
+  $REPO_DIR/poky/meta \
+  $REPO_DIR/poky/meta-poky \
+  $REPO_DIR/poky/meta-yocto-bsp \
+  $REPO_DIR/meta-raspberrypi \
+  $REPO_DIR/meta-sw \
+  $REPO_DIR/meta-qt5 \
+  $REPO_DIR/meta-openembedded/meta-oe \
+  $REPO_DIR/meta-openembedded/meta-networking \
+  $REPO_DIR/meta-openembedded/meta-python \
+  $REPO_DIR/meta-openembedded/meta-filesystems \
+  $REPO_DIR/meta-openembedded/meta-multimedia \
+  $REPO_DIR/meta-openembedded/meta-perl \
+  $REPO_DIR/meta-openembedded/meta-gnome \
+  $REPO_DIR/meta-openembedded/meta-xfce \
+  $REPO_DIR/meta-openembedded/meta-webserver \
+  $REPO_DIR/meta-openembedded/meta-initramfs \
   "
