--- a/bb-build-sysd/conf/bblayers.conf
+++ b/bb-build-sysd/conf/bblayers.conf
@@ -6,20 +6,20 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  /opt/yocto/ycoto-excersise/poky/meta \
-  /opt/yocto/ycoto-excersise/poky/meta-poky \
-  /opt/yocto/ycoto-excersise/poky/meta-yocto-bsp \
-  /opt/yocto/ycoto-excersise/meta-ti/meta-beagle \
-  /opt/yocto/ycoto-excersise/meta-ti/meta-ti-bsp \
-  /opt/yocto/ycoto-excersise/meta-ti/meta-ti-extras \
-  /opt/yocto/ycoto-excersise/meta-arm/meta-arm \
-  /opt/yocto/ycoto-excersise/meta-arm/meta-arm-bsp \
-  /opt/yocto/ycoto-excersise/meta-arm/meta-arm-toolchain \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-networking \
-  /opt/yocto/ycoto-excersise/meta-virtualization \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-python \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-filesystems \
-  /opt/yocto/ycoto-excersise/meta-openembedded/meta-oe \
-  /opt/yocto/ycoto-excersise/meta-sw \
-  /opt/yocto/ycoto-excersise/meta-custom \
+  $REPO_DIR/poky/meta \
+  $REPO_DIR/poky/meta-poky \
+  $REPO_DIR/poky/meta-yocto-bsp \
+  $REPO_DIR/meta-ti/meta-beagle \
+  $REPO_DIR/meta-ti/meta-ti-bsp \
+  $REPO_DIR/meta-ti/meta-ti-extras \
+  $REPO_DIR/meta-arm/meta-arm \
+  $REPO_DIR/meta-arm/meta-arm-bsp \
+  $REPO_DIR/meta-arm/meta-arm-toolchain \
+  $REPO_DIR/meta-openembedded/meta-networking \
+  $REPO_DIR/meta-virtualization \
+  $REPO_DIR/meta-openembedded/meta-python \
+  $REPO_DIR/meta-openembedded/meta-filesystems \
+  $REPO_DIR/meta-openembedded/meta-oe \
+  $REPO_DIR/meta-sw \
+  $REPO_DIR/meta-custom \
   "
